<resources>
    <string name="app_name">Lab05</string>
    <string name="local_copy">Local Copy</string>
    <string name="ondestroy">onDestroy: 0</string>
    <string name="onrestart">onRestart: 0</string>
    <string name="onstop">onStop: 0</string>
    <string name="onpause">onPause: 0</string>
    <string name="onresume">onResume: 0</string>
    <string name="onstart">onStart: 0</string>
    <string name="oncreate">onCreate: 0</string>
    <string name="global_copy">Global Copy</string>
    <string name="onrestart1">onRestart:</string>
    <string name="reset_lifetime_data">Reset Lifetime Data</string>
    <string name="finish_me">FINISH ME</string>
</resources>